@@ -1,3 +1,8 @@
+2015-07-07  James Anderson  <anderson@gfz-potsdam.de>
+
+	* src/timeutils.cpp:
+	* src/vex2difx.cpp: bugfixes
+
 2015-06-24  James Anderson  <anderson@gfz-potsdam.de>
 
 	* src/vex2difx.cpp:
